ADD - get image name and size create the XML

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   
   <h1>Tensorflow.js Real Time Object Detection</h1>
   
@@ -7,6 +7,6 @@
   <canvas id="canvas"></canvas>
 
 </div>
-
+ -->
 
 
