--- a/src/app/components/image-train-tool/image-train-tool.component.html
+++ b/src/app/components/image-train-tool/image-train-tool.component.html
@@ -1,1 +1,8 @@
-<p>image-train-tool works!</p>
+<label class="image-upload-container btn btn-bwm">
+  <span>Select Image</span>
+  <input #imageInput
+    type="file"
+    accept="image/*"
+    (change)="processFile(imageInput)">
+</label>
+<img [src]="img" #targetImage />
