Creating initial project structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<div style="text-align:center">
-  
-  <h1>Tensorflow.js Real Time Object Detection</h1>
-  
-  <video hidden id="vid" width="300" height="300"></video>
-  <canvas id="canvas"></canvas>
-
-</div>
-
-
-
