--- a/src/app/components/tensorflow-example/tensorflow-example.component.html
+++ b/src/app/components/tensorflow-example/tensorflow-example.component.html
@@ -4,5 +4,6 @@
   
   <video hidden id="vid" width="300" height="300"></video>
   <canvas id="canvas"></canvas>
+  <!-- <img id="img" src="../../../assets/images/9.jpeg"> -->
 
 </div>
