videos-list component and other styles fixed

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,6 @@
 <div class="home">
   <app-source-list class="sourceList"></app-source-list>
-  <div class="streamingVideos">Streaming videos</div>
+  <div class="streamingVideos">
+    <app-videos></app-videos>
+  </div>
 </div>
