--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -9,9 +9,9 @@
 .sourceList {
   grid-area: sourceList;
   background-color: orange;
+  height: 100%;
 }
 
 .streamingVideos {
   grid-area: streamingVideos;
-  background-color: red;
 }
