--- a/src/app/components/tensorflow-example/tensorflow-example.component.html
+++ b/src/app/components/tensorflow-example/tensorflow-example.component.html
@@ -1,9 +1,7 @@
 <div style="text-align:center">
   
-  <h1>Tensorflow.js Real Time Object Detection</h1>
+  <h1>Video {{videoId}}</h1>
   
-  <video hidden id="vid" width="300" height="300"></video>
-  <canvas id="canvas"></canvas>
-  <!-- <img id="img" src="../../../assets/images/9.jpeg"> -->
-
+  <img hidden width="600" height="300" id="vid{{videoId}}">
+  <canvas id="canvas{{videoId}}"></canvas>
 </div>
