Code cleanup and changed crosshair animation

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -6,8 +6,10 @@
   <div class="smoke smoke3"></div>
   <div 
     class="villain-character" 
-    [ngClass]="{'villain-move':isReady}"
-    #villain></div>
-  <div 
-    class="crosshair"></div>
+    [ngClass]="{'villain-move':isReady}"></div>
+  <div class="crosshair"></div>
+  <div class="landing-page-title">
+    <div>THREAT DETECTOR</div>
+    <div>Life Matters</div>
+  </div>
 </div>
