source list 2 WIP

--- a/src/app/components/shared/source-list/source-list.component.scss
+++ b/src/app/components/shared/source-list/source-list.component.scss
@@ -1,3 +1,8 @@
+ul {
+  max-height: 645px;
+  height: 100%;
+  overflow: auto;
+}
 li {
   display: flex;
   align-items: center;
@@ -25,4 +30,47 @@ p {
 .name-video {
   font-size: 15px;
   margin-left: 10px;
+}
+
+.grid-videos {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  h3 {
+    color: #ffffff;
+  }
+}
+
+.grid-checkboxes {
+  width: 100%;
+  margin: auto;
+}
+
+.grid-system {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 35%;
+  margin: auto;
+  justify-content: space-evenly;
+}
+
+mat-radio-group {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-size: 21px;
+  margin: auto;
+  width: 200px;
+
+  label {
+    display: flex;
+    justify-content: space-evenly;
+  }
+}
+
+.mat-radio-label {
+  display: flex;
+  justify-content: space-evenly;
 }
