--- a/src/app/components/videos/videos.component.html
+++ b/src/app/components/videos/videos.component.html
@@ -1,21 +1,31 @@
-<div class="videos-container">
-  <div class="buttons">
-    <button class="btn btn-primary" (click)="twoColumnClass()" [disabled]="twoColumns">
-      2 columns
-    </button>
-    <button class="btn btn-primary" (click)="threeColumnClass()" [disabled]="threeColumns">
-      3 columns
-    </button>
-    <button class="btn btn-primary" (click)="fourColumnClass()" [disabled]="fourColumns">
-      4 columns
-    </button>
-  </div>
-  <div
-    class="videos twoColumns"
-    [ngClass]="{ twoColumnVideos: twoColumns, threeColumnVideos: threeColumns, fourColumnVideos: fourColumns }"
-  >
-    <div class="video" *ngFor="let video of videos">
-      {{ video.name }}
+<div class="videos-main-container">
+  <app-source-list
+    class="sourceList"
+    (videosToWatch)="addVideoToWatchlist($event)"
+    (emitChoosenGrid)="choosenGirdSystem($event)"
+  ></app-source-list>
+  <div class="videos-container">
+    <div class="no-videos-message" *ngIf="videosToWatch.length == 0">
+      No videos added ! 
+    </div>
+    <div
+      class="videos twoColumns"
+      [ngClass]="{
+        twoColumnVideos: twoColumns,
+        threeColumnVideos: threeColumns,
+        fourColumnVideos: fourColumns
+      }"
+    >
+      <video
+        class="video"
+        controls
+        *ngFor="let video of videosToWatch"
+      >
+        <source
+          src="../../../../assets/VideoSources/{{ video.videoUrl }}"
+          type="video/mp4"
+        />
+      </video>
     </div>
   </div>
 </div>
