--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,5 @@
 <div class="home">
-  <app-source-list class="sourceList"></app-source-list>
-  <div class="streamingVideos">
+  <!-- <div class="streamingVideos"> -->
     <app-videos></app-videos>
-  </div>
+  <!-- </div> -->
 </div>
