--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,17 +1,17 @@
-.home {
-  display: grid;
-  grid-template-columns: 20% 1fr;
-  grid-template-rows: auto;
-  grid-template-areas: 
-  "sourceList streamingVideos";
-}
+// .home {
+//   display: grid;
+//   grid-template-columns: 20% 1fr;
+//   grid-template-rows: auto;
+//   grid-template-areas: 
+//   "sourceList streamingVideos";
+// }
 
-.sourceList {
-  grid-area: sourceList;
-  background-color: #263238;
-  height: 100%;
-}
+// .sourceList {
+//   grid-area: sourceList;
+//   background-color: #263238;
+//   height: 100%;
+// }
 
-.streamingVideos {
-  grid-area: streamingVideos;
-}
+// .streamingVideos {
+//   grid-area: streamingVideos;
+// }
