--- a/src/app/components/shared/source-list/source-list.component.html
+++ b/src/app/components/shared/source-list/source-list.component.html
@@ -1,9 +1,12 @@
-<ul *ngFor="let video of videos">
-  <li>
+<ul>
+  <li *ngFor="let video of videos">
     <p class="id-video">{{ video.id }}</p>
     <p class="name-video">
       {{ video.name }}
     </p>
+    <button class="btn btn-primary" (click)="addVideoToWatchlist(video)">
+      Add
+    </button>
     <video width="100px" height="70px" controls>
       <source
         src="../../../../assets/VideoSources/{{ video.videoUrl }}"
@@ -12,3 +15,39 @@
     </video>
   </li>
 </ul>
+
+<div class="grid-videos">
+  <h3>Video Grid</h3>
+  <div class="grid-radioboxes">
+    <!-- <div class="grid-system two-column">
+      <input type="radio" name="" id="" />
+      <h3>2 X 2</h3>
+    </div>
+    <div class="grid-system three-column">
+      <input type="radio" name="" id="" />
+      <h3>3 X 3</h3>
+    </div>
+    <div class="grid-system four-column">
+      <input type="radio" name="" id="" />
+      <h3>4 X 4</h3>
+    </div> -->
+    <mat-radio-group
+      name="gridList"
+      aria-labelledby="example-radio-group-label"
+      class="example-radio-group"
+      [(ngModel)]="choosenGrid"
+    >
+      <mat-radio-button
+        name="gridList"
+        class="example-radio-button"
+        *ngFor="let season of gridSystems; let i = index"
+        [value]="season.gridSystem"
+        (click)="choosenGirdSystem(season)"
+        [checked]="i === 0"
+      >
+        {{ season.gridSystem }}
+      </mat-radio-button>
+    </mat-radio-group>
+    <div style="color: white">Your grid system is: {{ choosenGrid }}</div>
+  </div>
+</div>
