--- a/src/app/components/videos/videos.component.scss
+++ b/src/app/components/videos/videos.component.scss
@@ -5,7 +5,6 @@
   margin: 0 10px;
   row-gap: 10px;
   column-gap: 10px;
-
 }
 .twoColumnVideos {
   grid-template-columns: 1fr 1fr;
@@ -23,7 +22,6 @@
   height: 100%;
   min-height: 170px;
   object-fit: contain;
-  background-color: lightgrey;
 }
 .buttons {
   display: flex;
@@ -31,4 +29,30 @@
 }
 .btn {
   margin: 10px;
+}
+
+.videos-main-container {
+  display: grid;
+  grid-template-columns: 26% 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: "sourceList videosContainer";
+  height: 100%;
+}
+
+.sourceList {
+  grid-area: sourceList;
+  background-color: #263238;
+  height: 100%;
+  min-width: 26% ;
+}
+
+.videosContainer {
+  grid-area: videosContainer;
+}
+
+.no-videos-message {
+  font-size: 40px;
+  color: black;
+  margin: auto;
+  width: 330px;
 }
