--- a/src/app/components/shared/source-list/source-list.component.html
+++ b/src/app/components/shared/source-list/source-list.component.html
@@ -4,9 +4,16 @@
     <p class="name-video">
       {{ video.name }}
     </p>
-    <button class="btn btn-primary" (click)="addVideoToWatchlist(video)">
+    <button
+      class="btn btn-primary"
+      (click)="addVideoToWatchlist(video)"
+      *ngIf="!checkDisabled(video.id)"
+    >
       Add
     </button>
+    <p class="name-video" *ngIf="checkDisabled(video.id)">
+      already added
+    </p>
     <video width="100px" height="70px" controls>
       <source
         src="../../../../assets/VideoSources/{{ video.videoUrl }}"
@@ -19,35 +26,20 @@
 <div class="grid-videos">
   <h3>Video Grid</h3>
   <div class="grid-radioboxes">
-    <!-- <div class="grid-system two-column">
-      <input type="radio" name="" id="" />
-      <h3>2 X 2</h3>
-    </div>
-    <div class="grid-system three-column">
-      <input type="radio" name="" id="" />
-      <h3>3 X 3</h3>
-    </div>
-    <div class="grid-system four-column">
-      <input type="radio" name="" id="" />
-      <h3>4 X 4</h3>
-    </div> -->
     <mat-radio-group
       name="gridList"
-      aria-labelledby="example-radio-group-label"
-      class="example-radio-group"
+      class="grid-radio-group"
       [(ngModel)]="choosenGrid"
     >
       <mat-radio-button
-        name="gridList"
-        class="example-radio-button"
-        *ngFor="let season of gridSystems; let i = index"
-        [value]="season.gridSystem"
-        (click)="choosenGirdSystem(season)"
-        [checked]="i === 0"
+        class="grid-radio-buttons"
+        *ngFor="let grid of gridSystems"
+        [checked]="grid == '1 X 1'"
+        (click)="choosenGirdSystem(grid)"
+        [value]="grid"
       >
-        {{ season.gridSystem }}
+        {{ grid }}
       </mat-radio-button>
     </mat-radio-group>
-    <div style="color: white">Your grid system is: {{ choosenGrid }}</div>
   </div>
 </div>
