Changed video dimensions

--- a/src/app/components/tensorflow-example/tensorflow-example.component.html
+++ b/src/app/components/tensorflow-example/tensorflow-example.component.html
@@ -2,8 +2,6 @@
   
   <h1>Tensorflow.js Real Time Object Detection</h1>
   
-  <video hidden id="vid" width="300" height="300"></video>
+  <video hidden id="vid"></video>
   <canvas id="canvas"></canvas>
-  <!-- <img id="img" src="../../../assets/images/9.jpeg"> -->
-
 </div>
