--- a/src/app/components/tensorflow-example/tensorflow-example.component.html
+++ b/src/app/components/tensorflow-example/tensorflow-example.component.html
@@ -2,6 +2,13 @@
   
   <h1>Tensorflow.js Real Time Object Detection</h1>
   
-  <video hidden id="vid"></video>
-  <canvas id="canvas"></canvas>
+  <video 
+    hidden 
+    id="vid{{videoId}}"
+    controls
+    autoplay
+  >
+  </video>
+  <canvas id="canvas{{videoId}}"></canvas>
+
 </div>
