Drew border on canvas on object detection

--- a/src/app/components/tensorflow-example/tensorflow-example.component.html
+++ b/src/app/components/tensorflow-example/tensorflow-example.component.html
@@ -2,10 +2,14 @@
   <video 
     hidden 
     id="vid{{videoId}}"
-    class="video"
     controls
     autoplay
   >
   </video>
-  <canvas id="canvas{{videoId}}"></canvas>
+  <canvas
+    id="canvas{{videoId}}"
+    class="video"
+  >
+  </canvas>
+  <!-- <mat-icon class="full-screen-icon">fullscreen</mat-icon> -->
 </div>
