--- a/src/app/components/tensorflow-example/tensorflow-example.component.scss
+++ b/src/app/components/tensorflow-example/tensorflow-example.component.scss
@@ -5,3 +5,10 @@
   min-height: 170px;
   object-fit: contain;
 }
+
+.full-screen-icon {
+  position: relative;
+  top: -218px;
+  left: 163px;
+  background-color: #FFF;
+}
