--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#">ThreatDetector</a>
+  <a class="navbar-brand" href="#">
+    <img 
+      src="../../../../assets/ui/logo_white.png"
+      class="top_nav_logo">
+  </a>
   <button
     class="navbar-toggler"
     type="button"
