--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -17,10 +17,27 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLinkActive="active-link" [routerLink]="['/home']">Home</a>
-      <a class="nav-item nav-link" routerLinkActive="active-link" [routerLink]="['/tensorFlowExample']"
-        >Tensorflow Example</a
+      <a 
+        class="nav-item nav-link"
+        routerLinkActive="active-link" 
+        [routerLink]="['/home']"
       >
+        Surveillance Mode
+      </a>
+      <a 
+        class="nav-item nav-link"
+        routerLinkActive="active-link" 
+        [routerLink]="['/home']"
+      >
+        Live Mode
+      </a>
+      <a 
+        class="nav-item nav-link"
+        routerLinkActive="active-link" 
+        [routerLink]="['/home']"
+      >
+        Credits
+      </a>
     </div>
   </div>
 </nav>
