--- a/src/app/components/videos/video-settings/video-settings.component.scss
+++ b/src/app/components/videos/video-settings/video-settings.component.scss
@@ -24,3 +24,55 @@ mgl-map {
   height: 50%;
   width: 100%;
 }
+
+.alarm {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.no-alarm-btn {
+  width: 200px;
+  height: 200px;
+  font-size: 30px;
+  color: black;
+  border-radius: 50%;
+  background-color: #69f0ae;
+}
+
+.pulsate-bck {
+  -webkit-animation: pulsate-bck 0.5s ease-in-out infinite both;
+  animation: pulsate-bck 0.5s ease-in-out infinite both;
+  background-color: red;
+  color: white;
+}
+
+@-webkit-keyframes pulsate-bck {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes pulsate-bck {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
