--- a/src/app/components/videos/videos.component.html
+++ b/src/app/components/videos/videos.component.html
@@ -3,6 +3,7 @@
     class="sourceList"
     (videosToWatch)="addVideoToWatchlist($event)"
     (emitChoosenGrid)="choosenGirdSystem($event)"
+    (emitRemovedVideo)="removeVideoFromWatchlist($event)"
     [addedVideos]="videosToWatch"
   ></app-source-list>
   <div class="videos-container">
@@ -24,6 +25,7 @@
         id="videoAdded"
         class="video"
         (click)="showVideoDetails(video)"
+        [ngClass]="['fullWidthVideo']"
       >
       </app-tensorflow-example>
       <!-- <video
