Added credits page, message can be changed later

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -34,7 +34,7 @@
       <a 
         class="nav-item nav-link"
         routerLinkActive="active-link" 
-        [routerLink]="['/home']"
+        [routerLink]="['/credits']"
       >
         Credits
       </a>
