alarm and video grid WIP

--- a/src/app/components/tensorflow-example/tensorflow-example.component.scss
+++ b/src/app/components/tensorflow-example/tensorflow-example.component.scss
@@ -1,6 +1,6 @@
 .video {
   width: 100%;
-  max-width: 350px;
+  // max-width: 350px;
   height: 100%;
   min-height: 170px;
   object-fit: contain;
