--- a/src/app/components/videos/videos.component.html
+++ b/src/app/components/videos/videos.component.html
@@ -5,6 +5,7 @@
     (emitChoosenGrid)="choosenGirdSystem($event)"
     (emitRemovedVideo)="removeVideoFromWatchlist($event)"
     [addedVideos]="videosToWatch"
+    [oneColumnGrid]="fullWidthVideo"
   ></app-source-list>
   <div class="videos-container">
     <div class="no-videos-message" *ngIf="videosToWatch.length == 0">
@@ -25,7 +26,7 @@
         id="videoAdded"
         class="video"
         (click)="showVideoDetails(video)"
-        [ngClass]="['fullWidthVideo']"
+        (dblclick)="showMainVideo(video)"
       >
       </app-tensorflow-example>
       <!-- <video
