--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -27,7 +27,7 @@
       <a 
         class="nav-item nav-link"
         routerLinkActive="active-link" 
-        [routerLink]="['/home']"
+        [routerLink]="['/live-mode']"
       >
         Live Mode
       </a>
