--- a/src/app/components/tensorflow-example/tensorflow-example.component.html
+++ b/src/app/components/tensorflow-example/tensorflow-example.component.html
@@ -9,6 +9,7 @@
   <canvas
     id="canvas{{videoId}}"
     class="video"
+    [ngClass]="{'live_video':isLive}"
   >
   </canvas>
   <!-- <mat-icon class="full-screen-icon">fullscreen</mat-icon> -->
