--- a/src/app/components/tensorflow-example/tensorflow-example.component.scss
+++ b/src/app/components/tensorflow-example/tensorflow-example.component.scss
@@ -6,6 +6,11 @@
   object-fit: contain;
 }
 
+.live_video{
+  max-width: 890px !important;
+  margin-top: 9%;
+}
+
 .full-screen-icon {
   position: relative;
   top: -218px;
