--- a/src/app/components/videos/videos.component.scss
+++ b/src/app/components/videos/videos.component.scss
@@ -2,7 +2,7 @@
   display: grid;
   justify-items: center;
   align-items: center;
-  margin: 0 10px;
+  margin: 20px;
   row-gap: 10px;
   column-gap: 10px;
 }
