--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -117,11 +117,16 @@
 
 .landing-page-menu {
   position: absolute;
-  top: 325px;
+  top: 350px;
+  font-family: "Orbitron", sans-serif;
+  font-size: 60px;
   color: white;
-  font-size: 72px;
   text-align: center;
   right: 95px;
+}
+
+.menu_item {
+  text-shadow: #FC0 1px 0 10px;
 }
 
 .menu_item:hover {
