Added alarm styling and rearm alarm option

--- a/src/app/components/tensorflow-example/tensorflow-example.component.html
+++ b/src/app/components/tensorflow-example/tensorflow-example.component.html
@@ -1,4 +1,6 @@
 <div style="text-align:center">
+  
+  <mat-spinner *ngIf="isSpinnerVisible"></mat-spinner>
   <video 
     hidden 
     id="vid{{videoId}}"
