--- a/src/app/components/videos/videos.component.scss
+++ b/src/app/components/videos/videos.component.scss
@@ -62,7 +62,8 @@
   font-size: 40px;
   color: #ffffff94;
   margin: auto;
-  width: 330px;
+  width: 410px;
+  margin-top: 6rem;
 }
 
 .videoSettings {
