--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
   -moz-osx-font-smoothing: antialased;
   font-family: "Orbitron", sans-serif;
   letter-spacing: 1px;
+
   /* width */
   ::-webkit-scrollbar {
     width: 6px;
@@ -30,6 +31,7 @@ html,
 body {
   height: 100%;
 }
+
 .home {
   height: calc(100% - 57px);
 }
@@ -43,4 +45,16 @@ body {
 .mat-radio-label {
   display: flex;
   justify-content: space-between;
+}
+
+text {
+  fill: white;
+}
+
+path[stroke="#5a7b7b"] {
+  stroke: white;
+}
+
+path[stroke="#648989"] {
+  stroke: white;
 }
